crates/phux-protocol/tests/snapshots/diff_wire_snapshots__snap_bold_italic_flags.snap
---
source: crates/phux-protocol/tests/diff_wire_snapshots.rs
expression: dump_ops(&ops)
---
00000000 | 00 00 00 01 01 00 00 00  00 00 00 00 01 01 00 00 |................
00000010 | 00 58 00 00 00 00 00 05                          |.X......
