crates/phux-protocol/tests/snapshots/diff_wire_snapshots__snap_cursor_style_block_no_blink.snap
---
source: crates/phux-protocol/tests/diff_wire_snapshots.rs
expression: dump_ops(&ops)
---
00000000 | 00 00 00 01 04 01 00 00                          |........
