crates/phux-protocol/tests/snapshots/diff_wire_snapshots__snap_empty_ops.snap
---
source: crates/phux-protocol/tests/diff_wire_snapshots.rs
expression: "dump_ops(&[])"
---
00000000 | 00 00 00 00                                      |....
