crates/phux-protocol/tests/snapshots/diff_wire_snapshots__snap_full_pane_diff_frame.snap
---
source: crates/phux-protocol/tests/diff_wire_snapshots.rs
expression: hex_dump(&buf)
---
00000000 | 00 00 00 38 40 00 00 00  42 00 00 00 00 de ad be |...8@...B.......
00000010 | ef 00 00 00 00 de ad be  ee 00 00 00 01 01 00 00 |................
00000020 | 00 00 00 00 00 01 01 00  00 00 4f 01 02 00 00 00 |..........O.....
00000030 | 00 00 00 00 00 01 01 00  01 00 00 00             |............
