crates/phux-protocol/tests/snapshots/diff_wire_snapshots__snap_mixed_color_cells.snap
---
source: crates/phux-protocol/tests/diff_wire_snapshots.rs
expression: dump_ops(&ops)
---
00000000 | 00 00 00 01 01 00 03 00  07 00 00 00 05 01 00 00 |................
00000010 | 00 61 00 00 00 00 00 00  01 00 00 00 62 01 07 00 |.a..........b...
00000020 | 00 00 00 00 01 00 00 00  63 00 01 04 00 00 00 00 |........c.......
00000030 | 01 00 00 00 64 02 ff 80  00 00 00 00 00 00 01 00 |....d...........
00000040 | 00 00 65 02 12 34 56 01  02 00 00 00 00          |..e..4V......
