crates/phux-protocol/tests/snapshots/diff_wire_snapshots__snap_mixed_op_sequence.snap
---
source: crates/phux-protocol/tests/diff_wire_snapshots.rs
expression: dump_ops(&ops)
---
00000000 | 00 00 00 02 01 00 00 00  00 00 00 00 02 01 00 00 |................
00000010 | 00 68 00 00 00 00 00 00  01 00 00 00 69 00 00 00 |.h..........i...
00000020 | 00 00 00 02 00 01 00 00  00 50                   |.........P
